--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,5 +13,18 @@ services:
       - CAPTCHA_SOLVER=${CAPTCHA_SOLVER:-none}
       - TZ=Europe/London
     ports:
-      - "${PORT:-8191}:8191"
+      - "8192:8191"
+    depends_on:
+      - nginx
     restart: unless-stopped
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "80:80"
+      - "443:443"
+      - "8191:8191"
+    volumes:
+      - ./resources/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./resources/nginx/.htpasswd:/etc/nginx/.htpasswd:ro
+    restart: unless-stopped
+
