--- a/resources/nginx/nginx.conf
+++ b/resources/nginx/nginx.conf
@@ -11,7 +11,7 @@ http {
         location / {
             auth_basic              "Restricted";
             auth_basic_user_file    .htpasswd;
-            proxy_pass              http://localhost:8192;
+            proxy_pass              http://flaresolverr:8192;
             proxy_read_timeout      60000;
         }
     }
