--- a/resources/nginx/nginx.conf
+++ b/resources/nginx/nginx.conf
@@ -12,6 +12,7 @@ http {
             auth_basic              "Restricted";
             auth_basic_user_file    .htpasswd;
             proxy_pass              http://flaresolverr:8192;
+            proxy_redirect          http://flaresolverr:8192/ /;
             proxy_read_timeout      60000;
         }
     }
