--- a/resources/nginx/nginx.conf
+++ b/resources/nginx/nginx.conf
@@ -12,8 +12,13 @@ http {
             auth_basic              "Restricted";
             auth_basic_user_file    .htpasswd;
             proxy_pass              http://flaresolverr:8192;
-            proxy_redirect          http://flaresolverr:8192/ /;
+            # proxy_redirect          http://flaresolverr:8192/ /;
             proxy_read_timeout      60000;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Host $host;
+            proxy_set_header content-type "application/json";
+            proxy_cache_bypass $http_upgrade;
+            proxy_set_header Connection 'upgrade';
         }
     }
 }
