--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - LOG_HTML=${LOG_HTML:-false}
       - CAPTCHA_SOLVER=${CAPTCHA_SOLVER:-none}
       - TZ=Europe/London
-      - HOST=0.0.0.0
+      - HOST=127.0.0.1
     ports:
       - "8192:8191"
     depends_on:
@@ -23,7 +23,7 @@ services:
     ports:
       - "8191:8191"
     volumes:
-      - ./resources/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./resources/nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - ./resources/nginx/.htpasswd:/etc/nginx/.htpasswd:ro
     restart: unless-stopped
 
