--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,18 +12,10 @@ services:
       - LOG_HTML=${LOG_HTML:-false}
       - CAPTCHA_SOLVER=${CAPTCHA_SOLVER:-none}
       - TZ=Europe/London
-      - HOST=0.0.0.0
-    ports:
-      - "8192:8191"
-    depends_on:
-      - nginx
-    restart: unless-stopped
-  nginx:
-    image: nginx:alpine
+      - HOST=127.0.0.1
+      - USER=${USER}
+      - PW=${PW}
     ports:
       - "8191:8191"
-    volumes:
-      - ./resources/nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./resources/nginx/.htpasswd:/etc/nginx/.htpasswd:ro
     restart: unless-stopped
 
